--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\JDoc.Specs\packages.config" />
   <repository path="..\JDoc.SqlServer.Test\packages.config" />
   <repository path="..\JDoc.SqlServer\packages.config" />
   <repository path="..\JDoc.Test\packages.config" />
